--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "my-app",
+  "name": "myapp",
+  "config": {
+    "projectName": "myapp",
+    "webAppName": "1:1095344010247:web:6e16064718094a3b8a66a2"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,16 +15,23 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "apollo-boost": "^0.4.7",
+    "firebase": "^7.13.2",
+    "googleapis": "^48.0.0",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "request-promise": "^4.2.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run decode-firebase-config",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "decode-firebase-config": "./scripts/secret_decode.sh && npm run fetch-firebase-web-config",
+    "fetch-firebase-web-config": "node create.config.files.js $npm_package_config_projectName $npm_package_config_webAppName"
   },
   "eslintConfig": {
     "extends": "react-app"
