--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "request-promise": "^4.2.5",
     "typescript": "~3.7.2"
   },
