--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "myapp",
   "config": {
-    "projectName": "spawnproject2322",
-    "webAppName": "1:306598093690:web:087635d2c5e85d45ba2cc3"
+    "projectName": "myapp",
+    "webAppName": "1:1095344010247:web:6e16064718094a3b8a66a2"
   },
   "version": "0.1.0",
   "private": true,
