--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "npm run decode-firebase-config && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "./scripts/deploy.sh $npm_package_config_projectName",
+    "postinstall": "npm run decode-firebase-config",
     "decode-firebase-config": "./scripts/secret_decode.sh && npm run fetch-firebase-web-config",
     "fetch-firebase-web-config": "node create.config.files.js $npm_package_config_projectName $npm_package_config_webAppName"
   },
