--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "deploy": "./scripts/deploy.sh $npm_package_config_projectName",
     "postinstall": "npm run decode-firebase-config",
