--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "prettier:base": "prettier --parser typescript",
     "prettier": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx,js}\"",
     "prettier:fix": "npm run prettier:base -- --loglevel warn --write \"src/**/*.ts\"",
+    "lint": "npx eslint 'src/**/*.{ts,tsx,js}' -c ./eslintconfig.json",
+    "lint:fix": "npm run lint -- --fix",
     "eject": "react-scripts eject",
     "deploy": "./scripts/deploy.sh $npm_package_config_projectName",
     "postinstall": "npm run decode-firebase-config",
@@ -62,6 +64,11 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.9.4",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
     "prettier": "^2.0.5"
   }
 }
