--- a/package.json
+++ b/package.json
@@ -64,11 +64,26 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.9.4",
-    "eslint": "^7.1.0",
+    "eslint": "6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.7",
     "prettier": "^2.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run build"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run prettier:fix",
+      "npm run lint:fix",
+      "git add"
+    ]
   }
 }
