add postinstall hack

--- a/batect.yml
+++ b/batect.yml
@@ -1,14 +1,15 @@
 containers:
-  deploy-env:
-    image: elkodev/ruby-dpl-image:f179fb18eeb91ac0421c8e9bd7f51715eb9a44c2
+  docker-push-env:
+    build_directory: .batect/docker-push-env
     volumes:
       - local: .
         container: /code
         options: cached
-
+      - local: /var/run/docker.sock
+        container: /var/run/docker.sock
     working_directory: /code
   build-env:
-    image: node:13.8.0
+    image: node:13.12.0
     volumes:
       - local: .
         container: /code
@@ -36,7 +37,6 @@ tasks:
       container: build-env
       command: ./scripts/test.sh
       environment:
-        CI: "true"
         AUTH_CONFIG: ${AUTH_CONFIG}
   testWatch:
     description: Run unit tests for application
@@ -55,30 +55,12 @@ tasks:
       command: ./scripts/local.sh
       environment:
         AUTH_CONFIG: ${AUTH_CONFIG}
-  deployDev:
-    description: Deploy app to dev
+  deploy:
+    description: Deploy app
     group: Deploy tasks
     run:
-      container: deploy-env
-      command: ./scripts/deploy.sh
+      container: docker-push-env
+      command: ./.batect/buildAndPushHeroku.sh
       environment:
-        APP_NAME: dev-myapp
         HEROKU_API_KEY: ${HEROKU_API_KEY}
-  deployStage:
-    description: Deploy app to stage
-    group: Deploy tasks
-    run:
-      container: deploy-env
-      command: ./scripts/deploy.sh
-      environment:
-        APP_NAME: stage-myapp
-        HEROKU_API_KEY: ${HEROKU_API_KEY}
-  deployProd:
-    description: Deploy app to prod
-    group: Deploy tasks
-    run:
-      container: deploy-env
-      command: ./scripts/deploy.sh
-      environment:
-        APP_NAME: prod-myapp
-        HEROKU_API_KEY: ${HEROKU_API_KEY}
+        APP_NAME: myapp-${ENV}
