--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "request-promise": "^4.2.5",
+    "serve": "^11.3.1",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "serve": "./scripts/serve.sh",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "prettier:base": "prettier --parser typescript",
@@ -56,7 +58,7 @@
     "deploy": "./scripts/deploy.sh $npm_package_config_projectName",
     "postinstall": "npm run decode-firebase-config",
     "decode-firebase-config": "./scripts/secret_decode.sh && npm run fetch-firebase-web-config",
-    "fetch-firebase-web-config": "node create.config.files.js $npm_package_config_projectName $npm_package_config_webAppName"
+    "fetch-firebase-web-config": "node ./scripts/create.config.files.js $npm_package_config_projectName $npm_package_config_webAppName"
   },
   "eslintConfig": {
     "extends": "react-app"
