--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "sonarqube-scanner": "^2.7.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
