--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "request-promise": "^4.2.5",
-    "serve": "^11.3.1",
+    "serve": "^11.3.2",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
@@ -58,6 +58,7 @@
     "eject": "react-scripts eject",
     "deploy": "./scripts/deploy.sh $npm_package_config_projectName",
     "postinstall": "npm run decode-firebase-config",
+    "quality:scan": "node sonar-scan.js",
     "decode-firebase-config": "./scripts/secret_decode.sh && npm run fetch-firebase-web-config",
     "fetch-firebase-web-config": "node ./scripts/create.config.files.js $npm_package_config_projectName $npm_package_config_webAppName"
   },
