--- a/batect.yml
+++ b/batect.yml
@@ -72,6 +72,8 @@ tasks:
   qualityScan:
     description: Code Quality Scan
     group: Test tasks
+    prerequisites:
+      - build
     run:
       container: build-env
       command: node sonar-scan.js
