--- a/batect.yml
+++ b/batect.yml
@@ -79,3 +79,4 @@ tasks:
       command: node sonar-scan.js
       environment:
         CODE_QUALITY_TOKEN: ${CODE_QUALITY_TOKEN}
+        AUTH_CONFIG: ${AUTH_CONFIG}
